# Project_MBH

./: 2차 프로젝트_계획서 2조.hwp  2차 프로젝트_기술서 2조.hwp  Project_MBH.ino  README.md  Test.ino  launch.json  main.cpp  main_H.cpp  tasks.json  tesseract_config.json  test  test.cpp
OpenCV/: CMakeLists.txt  background.cpp  main.cpp
diplayshow/: CMakeLists.txt  final.cpp  main.cpp  test.cpp
main/: CMakeLists.txt  main.cpp
project/openCV/: CMakeLists.txt  encoding.cpp  final.cpp  main.cpp
time/: time  time.cpp
weather/: CMakeLists.txt  Euc_krToUtf_8.cpp  findText.cpp  weather.c  weather.cpp  weatherJson.cpp  weatherjson.cpp
참고사이트/: site.txt
