cmake_minimum_required(VERSION 3.0)
project(basicOp)
find_package(CURL REQUIRED)
file(GLOB SOURCES "*.c")

foreach(SOURCE ${SOURCES})
    get_filename_component(EXE_NAME ${SOURCE} NAME_WE)
    add_executable(${EXE_NAME} ${SOURCE})
    target_link_libraries(${EXE_NAME} ${CURL_LIBRARIES})
endforeach()
